--- a/myapp/templates/myapp/signup.html
+++ b/myapp/templates/myapp/signup.html
@@ -16,6 +16,8 @@
 </head>
 
 <body>
+
+
     <!-- Background image -->
     <div id="threejs-background"></div>
     <div class="empty-box"></div>
@@ -25,81 +27,42 @@
         <h1 class="title">Sign Up</h1>
 
         <!-- Username field -->
-        {% load static %}
-        <!DOCTYPE html>
-        <html lang="en">
+        <form method="POST">
+            {% csrf_token %}
 
-        <head>
-            <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Schedule your day - Sign Up</title>
-            <link rel="stylesheet" href="{% static 'myapp/css/signup.css' %}">
-            <!-- --------- Fonts imports --------- -->
-            <!-- Winky Rough -->
-            <link
-                href="https://fonts.googleapis.com/css2?family=Winky+Rough:ital,wght@0,300..900;1,300..900&display=swap"
-                rel="stylesheet">
-            <!-- Fredericka the Great -->
-            <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
-        </head>
-
-        <body>
-            <!-- Background image -->
-            <div id="threejs-background"></div>
-            <div class="empty-box"></div>
-            <!-- Container -->
-            <div class="container">
-                <!-- Title -->
-                <h1 class="title">Sign Up</h1>
-
-                <!-- Username field -->
-                <form method="POST">
-                    {% csrf_token %}
-
-                    <!-- Username -->
-                    <div class="input-field">
-                        <p class="input-txt">Username:</p>
-                        <input type="text" name="{{ form.username.html_name }}"
-                            value="{{ form.username.value|default_if_none:'' }}" placeholder="Username" />
-                    </div>
-
-                    <!-- Email -->
-                    <div class="input-field">
-                        <p class="input-txt">E-mail:</p>
-                        <input type="email" name="{{ form.email.html_name }}"
-                            value="{{ form.email.value|default_if_none:'' }}" placeholder="E-mail address" />
-                    </div>
-
-                    <!-- Password1 -->
-                    <div class="input-field">
-                        <p class="input-txt">Password:</p>
-                        <input type="password" name="{{ form.password1.html_name }}" placeholder="Password" />
-                    </div>
-
-                    <!-- Password2 -->
-                    <div class="input-field">
-                        <p class="input-txt">Confirm password:</p>
-                        <input type="password" name="{{ form.password2.html_name }}" placeholder="Confirm password" />
-                    </div>
-
-                    <button class="btn" type="submit">Sign Up</button>
-                </form>
-
+            <!-- Username -->
+            <div class="input-field">
+                <p class="input-txt">Username:</p>
+                <input type="text" name="{{ form.username.html_name }}"
+                    value="{{ form.username.value|default_if_none:'' }}" placeholder="Username" />
             </div>
 
-            <div class="bottom-box"></div>
-            <footer class="footer">
-                <p class="footer-txt">This website was made using: HTML, CSS, JavaScript, Three.js and Django</p>
-            </footer>
+            <!-- Email -->
+            <div class="input-field">
+                <p class="input-txt">E-mail:</p>
+                <input type="email" name="{{ form.email.html_name }}" value="{{ form.email.value|default_if_none:'' }}"
+                    placeholder="E-mail address" />
+            </div>
 
-            <script type="module" src="{% static 'myapp/js/script.js' %}"></script>
-        </body>
+            <!-- Password1 -->
+            <div class="input-field">
+                <p class="input-txt">Password:</p>
+                <input type="password" name="{{ form.password1.html_name }}" placeholder="Password" />
+            </div>
 
-        </html>
+            <!-- Password2 -->
+            <div class="input-field">
+                <p class="input-txt">Confirm password:</p>
+                <input type="password" name="{{ form.password2.html_name }}" placeholder="Confirm password" />
+            </div>
+
+            <button class="btn" type="submit">Sign Up</button>
+        </form>
+
+
 
     </div>
 
-    <div class="bottom-box"></div>
     <footer class="footer">
         <p class="footer-txt">This website was made using: HTML, CSS, JavaScript, Three.js and Django</p>
     </footer>
