modified the login page

--- a/myapp/templates/myapp/login.html
+++ b/myapp/templates/myapp/login.html
@@ -24,7 +24,7 @@
     <div class="container">
         <!-- Title -->
         <h1 class="title">Login</h1>
-        <form method="POST">
+        <form method="POST" class="input-container">
             {% csrf_token %}
             <!-- Username field -->
             <div class="input-field">
