--- a/myapp/static/myapp/css/login.css
+++ b/myapp/static/myapp/css/login.css
@@ -43,6 +43,13 @@ body{
         margin: 20px 20px 40px 20px;
     }
 
+    & .input-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
     & .input-field{
         margin: 10px 20px 10px 20px;
     }
