--- a/myapp/static/myapp/css/signup.css
+++ b/myapp/static/myapp/css/signup.css
@@ -62,6 +62,13 @@ body{
         font-size: 12pt;
     }
 
+    & .forms{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
     & .btn{
         margin: 40px 20px 20px 20px;
         padding: 15px;
@@ -81,6 +88,14 @@ body{
         box-shadow: 0px 0px 10px 1px var(--lighter-yellowish);
     }
     
+    & .account-txt{
+        font-size: 12pt;
+
+        & .account-link{
+            color: var(--yellowish-gren);
+            font-weight: bold;
+        }
+    }
 }
 
 .empty-box{
