--- a/myapp/static/myapp/css/login.css
+++ b/myapp/static/myapp/css/login.css
@@ -23,6 +23,7 @@ body{
     background-color: var(--purply-magenta);
     /* Height of the page */
     height: 100vh;
+    margin: 0;
 }
 
 .container{
@@ -70,7 +71,7 @@ body{
     }
 
     & .btn{
-        margin: 40px 20px 20px 20px;
+        margin: 20px 20px 20px 20px;
         padding: 15px;
         font-size: 14pt;
         font-weight: bold;
@@ -121,6 +122,9 @@ body{
     bottom: 0;
     box-shadow: 0 -10px 10px 1px var(--darker-yellowish);
     
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     & .footer-txt{
         text-align: center;
