added backend for the list

--- a/myapp/templates/myapp/mainPage.html
+++ b/myapp/templates/myapp/mainPage.html
@@ -13,6 +13,7 @@
         rel="stylesheet">
     <!-- Fredericka the Great -->
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
+    <meta name="csrf-token" content="{{ csrf_token }}">
 </head>
 
 <body>
@@ -35,6 +36,8 @@
 
         <!-- Container for task items -->
         <div id="task-list"></div>
+        <div class="category-container" data-id="4"></div>
+
 
     </div>
 
